Implement dotted binders